--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.security.oauth2.client.registration.google.client-id=757903430833-i022u2qbhiha22ejcg7lc0gqksaha0ms.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=wR_1Tdzsr5C4HutJHlGdOjUr
+jwt.secret=stagged
